[gd_scene load_steps=2 format=3 uid="uid://d2vakkgi58gd8"]

[ext_resource type="Script" path="res://SplashScreens/Pause/splashscreen.gd" id="1_qrduy"]

[node name="Splashscreen" type="CanvasLayer"]
script = ExtResource("1_qrduy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 1279.0
offset_bottom = 718.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "GAME OVER

"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TryAgain" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../TryOther")
text = "TRY AGAIN"

[node name="TryOther" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../TryAgain")
focus_neighbor_bottom = NodePath("../MainMenu")

[node name="MainMenu" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../TryOther")
focus_neighbor_bottom = NodePath("../Exit")
text = "Main Menu"

[node name="Exit" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenu")
focus_neighbor_bottom = NodePath("../TryAgain")
text = "EXIT GAME"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/TryOther" to="." method="_on_try_other_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
